--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
 	"short_name": "Hezarfen UCS",
-	"name": "Hezarfen Space UCS",
+	"name": "Powered by Hezarfen Space",
 	"icons": [
 		{
 			"src": "logo-mini.png",
